--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="WNDR focuses on providing an advanced platform to modern-day gamers globally with a premium experience. For enthusiast games, it is a great digital platform to experience something great.">
-	<title>Our Mission- WNDR.com</title>
+	<title>Our Vision- WNDR.com</title>
 	<!-- slick css -->
 	<!-- bootstrap-css start -->
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
