--- a/templates/teams.html
+++ b/templates/teams.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Our visionary team members are working diligently to give you an immense experience of playing fantastic games. With years of combined experience, our team is keeping on finding the new ways to make WNDR more wonderful.">
+	<meta name="description" content="With years of experience, our team is searching the new ways to make WNDR more wonderful. Also it gives you immense experience of playing fantastic games.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Team Bio  - WNDR.com</title>
 	<!-- slick css -->
