--- a/templates/contact.html
+++ b/templates/contact.html
@@ -363,13 +363,13 @@
 					return false;
 				})
 			</script>
-			{% comment %} <script>
+			 <script>
 				$(document).ready(function(){
 				  $(document).mouseleave(function(){
 					  $("#exampleModal").modal("show");
 				});
 			  });
-			  </script> {% endcomment %}
+			  </script> 
 </body>
 
 
