--- a/templates/teams.html
+++ b/templates/teams.html
@@ -380,3 +380,11 @@
 					}
 				  });
 			</script>
+
+			<script>
+				$(document).ready(function(){
+				  $(document).mouseleave(function(){
+					  $("#exampleModal").modal("show");
+				  });
+			  });
+			  </script>
