--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="WNDR focuses on providing an advanced platform to modern-day gamers globally with a premium experience. For enthusiast games, it is a great digital platform to experience something great.">
+	<meta name="description" content="WNDR offers an advanced platform to modern-day gamers globally with a premium experience. For enthusiast games, It's a digital platform for great experiences.">
 	<title>Our Vision- WNDR.com</title>
 	<!-- slick css -->
 	<!-- bootstrap-css start -->
