--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3448,6 +3448,31 @@ img.sucribe-center-tabs {
     text-transform: capitalize;
     border-radius: 6px;
 }
+.invalid-sueccs-msg{
+    background: rgb(237 56 51 / 34%);
+    color: #ccb4b8;
+    width: 500px !important;
+    height: 36px;
+    margin-top: 55px;
+    position: relative;
+    margin-left: -43px;
+    max-width: 294px !important;
+    position: absolute;
+    margin-top: 49px;
+    text-align: center;
+    font-size: 14px;
+    border: 1px solid #f4a8a2;
+    text-transform: capitalize;
+    border-radius: 6px;
+}
+
+span#invalid2 {
+    position: absolute;
+    top: 7px;
+    left: 78px;
+    font-size: 14px;
+    /* color: white; */
+}
 .error-msg{
     background: rgb(237 56 51 / 34%);
     color: #ccb4b8;
