--- a/templates/home.html
+++ b/templates/home.html
@@ -52,6 +52,9 @@
 						<div class="alert alert-danger sueccs-msg" id="sucess_div2" role="alert" hidden>
 							<span id="sucess2" ></span>
 						</div>
+						<div class="alert alert-danger invalid-sueccs-msg" id="invalid_div2" role="alert" hidden>
+							<span id="invalid2" ></span>
+						</div>
 						<div class="alert alert-danger error-msg" id="error_div2" role="alert" hidden>
 							<span id="error2" ></span>
 						</div>
